<resources>
    <string name="app_name">AssessmentInterfacesAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Carlos Henrique dos Santos R Junior</string>
    <string name="nav_header_subtitle">carlos.hrq.rodrigues@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_informacoes_pessoais">Informações Pessoais</string>
    <string name="menu_formacao">Formação</string>
    <string name="menu_experiencia_profissional">Experiência Profissional</string>
    <string name="menu_cursos">Cursos</string>
    <string name="menu_publicacoes">Publicações</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

