<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_informacoes_pessoais" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_formation"
            android:title="@string/menu_formacao" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_work"
            android:title="@string/menu_experiencia_profissional" />
        <item
            android:id="@+id/nav_cursos"
            android:icon="@drawable/ic_cursos"
            android:title="@string/menu_cursos" />
        <item
            android:id="@+id/nav_publicacoes"
            android:icon="@drawable/ic_publicacoes"
            android:title="@string/menu_publicacoes" />
    </group>
</menu>