<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.edu.infnet.carlos.ui.InformacoesPessoais.InformacoesPessoaisFragment"
        android:label="@string/menu_informacoes_pessoais"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="br.edu.infnet.carlos.ui.Formacao.FormacaoFragment"
        android:label="@string/menu_formacao"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="br.edu.infnet.carlos.ui.ExperienciaProfissional.ExperienciaProfissionalFragment"
        android:label="@string/menu_experiencia_profissional"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_cursos"
        android:name="br.edu.infnet.carlos.ui.Cursos.CursosFragment"
        android:label="fragment_cursos"
        tools:layout="@layout/fragment_cursos" />
    <fragment
        android:id="@+id/nav_publicacoes"
        android:name="br.edu.infnet.carlos.ui.publicacoes.PublicacoesFragment"
        android:label="fragment_publicacoes"
        tools:layout="@layout/fragment_publicacoes" />
</navigation>